--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -11,6 +11,9 @@
     text-transform: uppercase;
     border: none;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    outline: none;
   
     &:hover {
       background-color: white;
@@ -24,6 +27,18 @@
 
       &:hover{
         background-color: #357ae8;
+        border: none;
+      }
+    }
+
+    &.inverted {
+      background-color: white;
+      color: black;
+      border: 1px solid black;
+
+      &:hover {
+        background-color: black;
+        color: white;
         border: none;
       }
     }
