--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -9,6 +9,14 @@
       height: 100%;
       width: 70px;
       padding: 25px;
+      transition: .5s ease-in-out;
+      opacity: 1;
+    }
+
+    .logo-container:hover {
+      transition: .5s ease-in-out;
+      transform: scale(1.3);
+      opacity: .9;
     }
   
     .options {
